# contador_regressivo_para_OBS

./: .gitignore  README.md  configuracao.txt  constants.py  controller.py  main.py  pyproject.toml  requirements.txt  variaveis.py  view.py
abstracts/: abstract_controller.py  abstract_view.py
css/: style.css
