[tool.poetry]
name = "contador-regressivo-para-obs"
version = "0.1.0"
description = ""
authors = ["Edimar de Sá <edimarfreitas95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.1.0"
ttkbootstrap = "^1.10.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
tasky = "^0.8.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
